# defect

./: .gitignore  .gitmodules  CLAUDE.MD  Cargo.toml  README.MD  TODO.MD  justfile
.defect/: .gitignore
crates/acp/: Cargo.toml
crates/agent/: Cargo.toml
crates/cli/: Cargo.toml
crates/config/: Cargo.toml
crates/llm/: Cargo.toml
crates/llm/examples/: anthropic_smoke.rs  deepseek_smoke.rs  openai_smoke.rs
crates/llm/examples/common/: mod.rs
crates/llm/oas/: anthropic.yaml  openai.yaml
crates/llm/src/: lib.rs  protocol.rs  provider.rs  wire.rs
crates/llm/src/protocol/: anthropic_messages.rs  deepseek_chat.rs  openai_chat.rs
crates/llm/src/protocol/anthropic_messages/: tests.rs
crates/llm/src/protocol/openai_chat/: tests.rs
crates/llm/src/provider/: anthropic.rs  bedrock.rs  deepseek.rs  openai.rs
crates/llm/src/provider/bedrock/: test.rs
crates/llm/src/wire/: anthropic.rs  openai.rs
crates/llm/tests/: anthropic_e2e.rs  common.rs  deepseek_e2e.rs  openai_e2e.rs
crates/mcp/: Cargo.toml
crates/sandbox/: Cargo.toml
crates/storage/: Cargo.toml
crates/tools/: Cargo.toml
docs/: architecture.md  coding-reference.md
docs/inbound/: acp-bridge.md  acp-shell.md  acp-slash-commands.md
docs/internal/: capabilities.md  config.md  errors.md  event-model.md  hooks.md  llm-trait.md  observability-langfuse.md  sandbox-policy.md  session.md  skills.md  storage-jsonl.md  thinking-roundtrip.md  tool-trait.md  tools-bash.md  tools-search.md  turn-loop.md  workspace-checkpoints.md
docs/outbound/: llm-anthropic.md  llm-openai.md  llm.md
docs/proposals/: README.md  provider-protocol-polyfills.md  (+1 more)
(+97 files in other folders)
